[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nintendo 64 - Super Mario 64 - Chain Chomp/ChainChomp.obj" type="PackedScene" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]
[ext_resource path="res://ChainChomp.gd" type="Script" id=3]
[ext_resource path="res://simple movement spell (holder node).tscn" type="PackedScene" id=4]

[sub_resource type="SphereShape" id=1]
radius = 22.74

[node name="ChainChomp" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="KinematicBody" type="KinematicBody" parent="." index="1"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody" index="0"]
shape = SubResource( 1 )

[node name="Area" type="Area" parent="KinematicBody" index="1"]
transform = Transform( 1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody/Area" index="0"]
shape = SubResource( 1 )

[node name="damagetakencolortimer" type="Timer" parent="KinematicBody" index="2"]
wait_time = 0.278

[node name="simple movement spell (holder node)" parent="." index="2" instance=ExtResource( 4 )]

[connection signal="body_entered" from="KinematicBody/Area" to="KinematicBody" method="_on_Area_body_entered"]
[connection signal="donedashing" from="simple movement spell (holder node)" to="." method="_on_simple_movement_spell_holder_node_donedashing"]
[connection signal="startdashing" from="simple movement spell (holder node)" to="." method="_on_simple_movement_spell_holder_node_startdashing"]
[connection signal="waitingtodash" from="simple movement spell (holder node)" to="." method="_on_simple_movement_spell_holder_node_waitingtodash"]
[connection signal="winding_up" from="simple movement spell (holder node)" to="." method="_on_simple_movement_spell_holder_node_winding_up"]
